--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       <button class="redeem-btn" data-product-id="gta5">Redeem</button>
     </div>
     <div class="product-card">
-      <img src="Schedule 1.jpg" alt="scd1">
+      <img src="Schedule 1.jpg" alt="Schedule 1">
       <h3>Schedule 1</h3>
-      <button class="redeem-btn" data-product-id="scd1">Redeem</button>
+      <button class="redeem-btn" data-product-id="scd">Redeem</button>
     </div>
   </main>
 
